<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.microsoft.azure.kusto</groupId>
    <artifactId>kusto-client</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <url>https://github.com/Azure/azure-kusto-java</url>
    <scm>
        <url>scm:git:https://github.com/Azure/azure-kusto-java</url>
        <connection>scm:git:https://github.com/Azure/azure-kusto-java</connection>
    </scm>
    <distributionManagement>
        <downloadUrl>https://github.com/Azure/azure-kusto-java/releases</downloadUrl>
    </distributionManagement>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>microsoft</id>
            <name>Microsoft</name>
        </developer>
    </developers>

    <properties>
        <revision>4.0.4</revision> <!-- CHANGE THIS to adjust project version-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <!-- Use 1.0.6 for fasterxml v 2.12.x (good for databricks runtime 2.10.x) -->
        <azure-bom-version>1.2.4</azure-bom-version>

        <!-- Versions below are for several dependencies we're using in the data & ingest modules -->
        <!-- Compile dependencies -->
        <slf4j.version>1.8.0-beta4</slf4j.version>
        <commons-lang3.version>3.11</commons-lang3.version>
        <commons-text.version>1.10.0</commons-text.version>
        <msal4j.version>1.12.0</msal4j.version>
        <httpclient.version>4.5.13</httpclient.version>
        <httpcore.version>4.4.15</httpcore.version>
        <fasterxml.jackson.core.version>2.13.3</fasterxml.jackson.core.version>
        <reactor-core.version>3.4.19</reactor-core.version>
        <univocity-parsers.version>2.9.1</univocity-parsers.version>
        <resilience4j.version>1.7.1</resilience4j.version>
        <io.vavr.version>0.10.2</io.vavr.version>
        <!-- Test dependencies -->
        <bouncycastle.version>1.68</bouncycastle.version>
        <jsonassert.version>1.5.0</jsonassert.version>
        <sqlite-jdbc.version>3.36.0.2</sqlite-jdbc.version>
        <annotations.version>22.0.0</annotations.version>

        <!-- Other dependencies -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
        <flatten-maven-plugin.version>1.2.5</flatten-maven-plugin.version>
        <junit.version>5.8.2</junit.version>
        <mockito.version>4.5.1</mockito.version>
        <jacoco.version>0.8.7</jacoco.version>
    </properties>

    <modules>
        <module>ingest</module>
        <module>data</module>
        <module>samples</module>
        <module>quickstart</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.16.0</version>
                <configuration>
                    <configFile>${session.executionRootDirectory}/kusto-style.xml</configFile>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
